--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
 dependencies {
     //Basic dependencies
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -64,8 +64,9 @@ dependencies {
     //Swipe to refresh
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
-    implementation 'androidx.core:core-splashscreen:1.0.0'
+    //OkHttp
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+
     implementation 'androidx.core:core-splashscreen:1.0.0'
     implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
 }
