--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ plugins {
 }
 
 android {
-    namespace 'de.pd.lesedatenbank'
+    namespace 'de.pd.bdb'
     compileSdk 33
 
     defaultConfig {
-        applicationId "de.pd.lesedatenbank"
+        applicationId "de.pd.bdb"
         minSdk 26
         targetSdk 33
         versionCode 1
@@ -37,9 +37,10 @@ dependencies {
     //Basic dependencies
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
     //AppIntro
     implementation 'com.github.AppIntro:AppIntro:6.2.0'
